compiler/src/test/resources/amyc/parser/failing/ClassDefError3.grading.amy
object ClassDef
  case class Foo(x, y: Int) extends Bar
end ClassDef
